work in progress

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,20 @@
 {{lineage}}
-  <h1>Hello</h1>
-
 {{lannister.house}}
-{{lannister}}
+{{lannister.parents.first_parents}}
+{{lannister.parents.second_parents}}
+{{lannister.child.first_child}}
+{{lannister.child.second_child}}
+{{lannister.child.third_child}}
+{{lannister.child.fourth_child}}
+{{targaryen.house}}
+{{targaryen.parents}}
+{{targaryen.child.first_child}}
+{{targaryen.child.second_child}}
+{{targaryen.child.third_child}}
+{{stark.house}}
+{{stark.parents}}
+{{stark.child.first_child}}
+{{stark.child.second_child}}
+{{stark.child.third_child}}
+{{stark.child.fourth_child}}
+{{stark.child.fifth_child}}
